<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <!-- 제목 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_to_seat"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <!-- 구분선 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <!-- 공통 말 -->
    <TextView
        android:id="@+id/seatCheak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_seat"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <!-- 좌석 -->
    <TextView
        android:id="@+id/yourseat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n층 커뮤니티라운지 /n번 좌석"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <!-- 버튼 2개를 세로로 배치하는 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <!-- 취소 버튼 -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

        <!-- 예약 버튼 -->
        <Button
            android:id="@+id/btnReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="@color/ajou"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>